personalized structure/implemenation

--- a/PizzaStore/PizzaStore.Testing/PizzaStore.Testing.csproj
+++ b/PizzaStore/PizzaStore.Testing/PizzaStore.Testing.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PizzaStore.Domain\PizzaStore.Domain.csproj" />
+    <ProjectReference Include="..\PizzaStore.Client\PizzaStore.Client.csproj" />
   </ItemGroup>
 
 </Project>
