--- a/week_2/PizzaStore/PizzaStore.Storing/PizzaStore.Storing.csproj
+++ b/week_2/PizzaStore/PizzaStore.Storing/PizzaStore.Storing.csproj
@@ -5,8 +5,7 @@
   </ItemGroup>
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
 </Project>
